# crypto-alpha

./: .gitignore  README.md  cursor_cryptocurrency_prediction_model.md  pyproject.toml  requirements.txt
artifacts/: audit_report.json  btc_backtest_trades.csv  btc_trade_summary.json  btc_walkforward_gate_diagnostics.json  btc_walkforward_summary.json  btc_walkforward_trades.csv  btc_wr_decay_analysis.json  dashboard.html  decision_BTC_USDT.json  decision_BTC_USDT.txt  decision_ETH_USDT.json  decision_ETH_USDT.txt  decisions_latest.json  decisions_latest.txt  experiment_log.jsonl  run_all_summary.json  sentiment_cache.json  train_acceptance.json  train_summary.json  walkforward_BNB_USDT.json  walkforward_BNB_USDT_gate_diagnostics.json  walkforward_ETH_USDT_trades.csv
config/: config.yaml
docs/: ARCHITECTURE.md
scripts/: 01_fetch_data.py  02_build_features.py  03_label.py  04_train_and_backtest.py  05_cpcv_report.py  06_decide.py  07_serve.py  08_fetch_news.py  09_backfill_news.py  10_run_all.py  11_make_canvas.py  12_audit.py  13_backfill_liquidations.py  14_import_macro_calendar.py  15_build_macro_calendar.py  _bootstrap.py  btc_kline_panel.py  btc_trade_summary.py  btc_walkforward_compare.py  btc_walkforward_summary.py  fetch_binance_vision.py  mac_env.sh  run_news_backfill_robust.py  train_llm_qlora.py  validate_macro_calendar_alignment.py  validate_news_alignment.py  wf_console_server.py
tests/: test_calibration_primary_gates.py  test_design_fixes.py  test_fresh_tip.py  test_gate_diagnostics.py  test_gdelt_backfill_coverage.py  test_hardening_guards.py  (+9 more)
(+115 files in other folders)
